@@ -527,6 +527,10 @@
 
       \item \code{getS3method("t", "test")} no longer finds the
       \code{t.test()} function, fixing \PR{18627}.
+
+      \item \code{pdf()} and \code{postscript()} support for the documented
+      Adobe encodings \code{"Greek"} and \code{"Cyrilllic"} was missing
+      (although the corresponding Windows' codepages could be used).
     }
   }
 }
